test/sh/error/misc/trivial_type.sk
x: Int = 1

# explicitly cause file to fail so CI passes
y := x + false
